added catalog pdf

--- a/catalog.html
+++ b/catalog.html
@@ -38,28 +38,19 @@
         </section>
 
         <section class="section-card">
-            <div class="catalog-grid">
-                <article class="catalog-item">
-                    <h3>Product Category 1</h3>
-                    <p>
-                        Short description of this category or key products.
-                    </p>
-                </article>
+            <section class="section-card">
 
-                <article class="catalog-item">
-                    <h3>Product Category 2</h3>
-                    <p>
-                        Another category placeholder. You can add more items or link to PDFs.
-                    </p>
-                </article>
+                <div class="download-links">
+                    <a href="docs/products.pdf" download="Catalog.pdf" class="download-link">
+                        📄 View Product Catalog
+                    </a>
 
-                <article class="catalog-item">
-                    <h3>Product Category 3</h3>
-                    <p>
-                        Use this area to highlight important products or ranges.
-                    </p>
-                </article>
-            </div>
+                    <a href="docs/products.pdf" download="Catalog.pdf" class="download-link">
+                        💰 View Price List
+                    </a>
+                </div>
+            </section>
+
         </section>
     </main>
 
