added email send

--- a/about.html
+++ b/about.html
@@ -55,17 +55,16 @@
             <div>
                 <h3>At a glance</h3>
                 <ul class="details-list">
-                    <li>Founded: <em>[Year]</em></li>
-                    <li>Location: <em>[City, Country]</em></li>
-                    <li>Core products or services: <em>[Short list]</em></li>
-                    <li>Key value: <em>[e.g. Precision, Reliability, Speed]</em></li>
+                    <li>Founded: <em>2023</em></li>
+                    <li>Location: <em>Patiala, Punjab</em></li>
+                    <li>Core products or services: <em>Copper/ALuminium Lugs and Ferulles</em></li>
                 </ul>
             </div>
         </section>
     </main>
 
     <footer class="site-footer">
-        © <span id="year"></span> Noran Transmission. All rights reserved.
+        © <span id="year"></span> Noran Transmission Private Limited. All rights reserved.
     </footer>
 
     <script>
