--- a/catalog.html
+++ b/catalog.html
@@ -38,24 +38,35 @@
         </section>
 
         <section class="section-card">
-            <section class="section-card">
-
-                <div class="download-links">
-                    <a href="docs/products.pdf" download="Catalog.pdf" class="download-link">
-                        📄 View Product Catalog
+            <div class="download-card-grid">
+                <article class="download-card">
+                    <h2>Product Catalog</h2>
+                    <p>
+                        Download the latest catalog with our complete range of products and
+                        specifications.
+                    </p>
+                    <a href="docs/products.pdf" download="Noran-Product-Catalog.pdf"
+                        class="button-primary download-btn">
+                        Download Catalog (PDF)
                     </a>
+                </article>
 
-                    <a href="docs/products.pdf" download="Catalog.pdf" class="download-link">
-                        💰 View Price List
+                <article class="download-card">
+                    <h2>Price List</h2>
+                    <p>
+                        Download the detailed price list for all available products.
+                    </p>
+                    <a href="docs/price-list.pdf" download="Noran-Price-List.pdf" class="button-primary download-btn">
+                        Download Price List (PDF)
                     </a>
-                </div>
-            </section>
-
+                </article>
+            </div>
         </section>
+
     </main>
 
     <footer class="site-footer">
-        © <span id="year"></span> Noran Transmission. All rights reserved.
+        © <span id="year"></span> Noran Transmission Private Limited. All rights reserved.
     </footer>
 
     <script>
