--- a/contact.html
+++ b/contact.html
@@ -37,48 +37,60 @@
             </p>
         </section>
 
-        <section class="section-card grid-two">
-            <div>
-                <h2>Get in touch</h2>
-                <form class="form">
-                    <div class="form-row">
-                        <label for="name">Name</label>
-                        <input id="name" type="text" placeholder="Your name" />
-                    </div>
+       <section class="section-card grid-two">
+  <div>
+    <h2>Get in touch</h2>
+    <form class="form" id="contactForm">
+      <div class="form-row">
+        <label for="name">Name</label>
+        <input id="name" name="name" type="text" placeholder="Your name" required />
+      </div>
 
-                    <div class="form-row">
-                        <label for="email">Email</label>
-                        <input id="email" type="email" placeholder="you@example.com" />
-                    </div>
+      <div class="form-row">
+        <label for="email">Email</label>
+        <input id="email" name="email" type="email" placeholder="you@example.com" required />
+      </div>
 
-                    <div class="form-row">
-                        <label for="message">Message</label>
-                        <textarea id="message" rows="4" placeholder="How can we help?"></textarea>
-                    </div>
+      <div class="form-row">
+        <label for="message">Message</label>
+        <textarea
+          id="message"
+          name="message"
+          rows="4"
+          placeholder="How can we help?"
+          required
+        ></textarea>
+      </div>
 
-                    <button type="button" class="button-primary">
-                        Send (placeholder)
-                    </button>
-                </form>
-                <p style="margin-top:0.75rem; font-size:0.85rem; color:var(--text-muted);">
-                    This form is just visual for now. When you’re ready, we can hook it up to a real email service.
-                </p>
-            </div>
+      <div class="form-row">
+        <label style="display:flex; align-items:center; gap:0.4rem; font-size:0.9rem;">
+          <input type="checkbox" id="sendCopy" />
+          Send me a copy of this message
+        </label>
+      </div>
 
-            <div>
-                <h3>Contact details</h3>
-                <ul class="details-list">
-                    <li><strong>Address:</strong> [Your address here]</li>
-                    <li><strong>Phone:</strong> [Phone number]</li>
-                    <li><strong>Email:</strong> [info@noran.in]</li>
-                    <li><strong>Hours:</strong> [Working hours]</li>
-                </ul>
-            </div>
-        </section>
+      <button type="submit" class="button-primary" id="contactSubmit">
+        Send message
+      </button>
+      <p id="contactStatus" style="font-size:0.85rem; margin-top:0.5rem; color:var(--text-muted);"></p>
+    </form>
+  </div>
+
+  <div>
+    <h3>Contact details</h3>
+    <ul class="details-list">
+      <li><strong>Address:</strong> [Your address here]</li>
+      <li><strong>Phone:</strong> [Phone number]</li>
+      <li><strong>Email:</strong> [info@noran.in]</li>
+      <li><strong>Hours:</strong> [Working hours]</li>
+    </ul>
+  </div>
+</section>
+
     </main>
 
     <footer class="site-footer">
-        © <span id="year"></span> Noran Transmission. All rights reserved.
+        © <span id="year"></span> Noran Transmission Private Limited. All rights reserved.
     </footer>
 
     <script>
@@ -86,5 +98,16 @@
     </script>
     <script src="script.js"></script>
 </body>
+<script src="https://cdn.emailjs.com/sdk/3.11.0/email.min.js"></script>
+<script>
+  (function () {
+    emailjs.init("W-ALQ03ghXk3TLepn");
+  })();
+</script>
+
+<script>
+  document.getElementById("year").textContent = new Date().getFullYear();
+</script>
+<script src="script.js"></script>
 
 </html>
