--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </main>
 
     <footer class="site-footer">
-        © <span id="year"></span> Noran Transmission. All rights reserved.
+        © <span id="year"></span> Noran Transmission Private Limited. All rights reserved.
     </footer>
 
     <script>
