fixed orb error

--- a/contact.html
+++ b/contact.html
@@ -74,10 +74,10 @@
             <div>
                 <h3>Contact details</h3>
                 <ul class="details-list">
-                    <li><strong>Address:</strong> [Your address here]</li>
-                    <li><strong>Phone:</strong> [Phone number]</li>
-                    <li><strong>Email:</strong> [info@noran.in]</li>
-                    <li><strong>Hours:</strong> [Working hours]</li>
+                    <li><strong>Address:</strong>16,17,18, Plot no 15, Farm Bahadurgarh, Patiala, Punjab 147021</li>
+                    <li><strong>Phone:</strong> +91-9814120876</li>
+                    <li><strong>Email:</strong> noran.tpl1@gmail.com</li>
+                    <li><strong>Hours:</strong> Mon-Sat 08:30 am - 6:00 pm </li>
                 </ul>
             </div>
         </section>
