--- a/contact.html
+++ b/contact.html
@@ -87,7 +87,7 @@
     <footer class="site-footer">
         © <span id="year"></span> Noran Transmission Private Limited. All rights reserved.
     </footer>
-    <script src="https://cdn.emailjs.com/sdk/3.11.0/email.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
     <script>
         emailjs.init("W-ALQ03ghXk3TLepn");
     </script>
