--- a/index.html
+++ b/index.html
@@ -32,33 +32,69 @@
     <main class="wrapper">
         <section class="page-intro">
             <h1 class="page-title">Welcome to Noran Transmission</h1>
-            <p class="page-subtitle">
-                Simple placeholder home page. You can replace this section later with your
-                real content, images, or anything else.
-            </p>
         </section>
+        <section class="home-carousel">
+            <div class="carousel-container">
 
+                <div class="carousel-slide fade">
+                    <img src="images/pic2.jpg" alt="Noran product 1">
+                </div>
+
+                <div class="carousel-slide fade">
+                    <img src="images/thimbles.jpg" alt="Noran product 2">
+                </div>
+
+                <div class="carousel-slide fade">
+                    <img src="images/thimbles.jpg" alt="Noran product 3">
+                </div>
+            </div>
+
+            <!-- Dots -->
+            <div class="carousel-dots">
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+            </div>
+        </section>
+        <section class="section-card products-section">
+            <h2>Our Products</h2>
+            <div class="products-grid">
+                <div class="product-card">
+                    <img src="images/copper-terminal-ends.jpg" alt="Copper Lugs">
+                    <h3>Copper/Aluminium terminal ends</h3>
+                </div>
+
+                <div class="product-card">
+                    <img src="images/crimping-rings.jpeg" alt="Aluminium Lugs">
+                    <h3>Insulated/Crimping rings</h3>
+                </div>
+
+                <div class="product-card">
+                    <img src="images/ferrules.webp" alt="Ferrules">
+                    <h3>Ferrules</h3>
+                </div>
+
+                <div class="product-card">
+                    <img src="images/rings.jpeg" alt="Press Board Components">
+                    <h3>Pin type Terminals</h3>
+                </div>
+            </div>
+            <p>For more products please check out our catalog section and download the full catalog</p>
+        </section>
         <section class="section-card grid-two">
             <div>
-                <h2>Clean, minimal starting point</h2>
-                <p>
-                    This home page is intentionally simple so you can plug in your own
-                    messaging later. You might want to add a short introduction, key
-                    offerings, or a hero image.
-                </p>
-                <p>
-                    The layout is responsive and will adjust nicely on mobile screens.
-                </p>
+                <h2>Our Clients</h2>
+                <p>We proudly serve leading state power corporations and distribution companies.</p>
             </div>
-            <div>
-                <h3>Next steps for you</h3>
-                <ul class="details-list">
-                    <li>Replace this text with your actual home page copy.</li>
-                    <li>Add product photos or a hero banner if needed.</li>
-                    <li>Update the About, Catalog, and Contact pages with your details.</li>
-                </ul>
+
+            <div class="clients-logos">
+                <img src="images/PSPCL.png" alt="PSPCL">
+                <img src="images/LHBVN.png" alt="UHBVN">
+                <img src="images/DHBVN.jpg" alt="DHBVN">
             </div>
         </section>
+
+
     </main>
 
     <footer class="site-footer">
