--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
         <section class="page-intro">
             <h1 class="page-title">About Us</h1>
             <p class="page-subtitle">
-                Replace this placeholder text with your company story, values, and background.
+               Noran Transmission Pvt. Ltd. specializes in the manufacturing of high-quality lugs and ferrules, along with the supply of transformer components and pressboards. With a strong commitment to quality and customer satisfaction, we aim to serve the electrical and transformer industry with reliable and efficient solutions.
             </p>
         </section>
 
@@ -41,15 +41,17 @@
             <div>
                 <h2>Who we are</h2>
                 <p>
-                    This is a placeholder description. You can describe when the company
-                    started, what you specialise in, and the industries you serve.
+                    Noran Transmission Pvt Ltd, founded in September 2023, is dedicated to delivering high-quality
+                    Copper Lugs, Aluminium Lugs, and Press Board components specifically designed for transformers. Our
+                    commitment to understanding and addressing the needs of our customers ensures reliability in every
+                    product we deliver.
                 </p>
-
+<!-- 
                 <h2>How we work</h2>
                 <p>
                     Briefly explain your approach: quality focus, customer service,
                     reliability, etc. Keep it short and easy to read.
-                </p>
+                </p> -->
             </div>
 
             <div>
@@ -61,6 +63,33 @@
                 </ul>
             </div>
         </section>
+        <section class="section-card milestones-section">
+            <h2>Proud Milestones</h2>
+
+            <div class="milestones-grid">
+                <div class="milestone-item">
+                    <h3>Quality Assurance - Trusted standards</h3>
+                    <p>
+                        We have established a reputation for excellence, achieving consistent quality checks and certifications that reinforce our commitment to supplying only the best components.
+                    </p>
+                </div>
+
+                <div class="milestone-item">
+                    <h3>Customer Satisfaction - Our priority</h3>
+                    <p>
+                        Our dedication to client satisfaction has resulted in a strong portfolio of repeat customers, highlighting our efficiency and reliability in delivery.
+                    </p>
+                </div>
+
+                <div class="milestone-item">
+                    <h3>Innovative Solutions - Leading the way</h3>
+                    <p>
+                        We continuously invest in advanced technologies and innovations to enhance our product lines and meet the evolving needs of the electrical industry.
+                    </p>
+                </div>
+            </div>
+        </section>
+
     </main>
 
     <footer class="site-footer">
