--- a/catalog/index.html
+++ b/catalog/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8" />
     <title>Noran Transmission – Catalog</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="/styles.css" />
 </head>
 
 <body>
     <header class="site-header">
         <div class="wrapper header-inner">
-            <a href="index.html" class="logo">
-                <img src="logo.png" alt="Noran Transmission logo" class="logo-img" />
+            <a href="/" class="logo">
+                <img src="/logo.png" alt="Noran Transmission logo" class="logo-img" />
                 <span class="sr-only">Noran Transmission</span>
             </a>
 
@@ -21,10 +21,10 @@
             </button>
 
             <nav class="main-nav" id="mainNav">
-                <a href="index.html" class="nav-link">Home</a>
-                <a href="about.html" class="nav-link">About</a>
-                <a href="catalog.html" class="nav-link active">Catalog</a>
-                <a href="contact.html" class="nav-link">Contact</a>
+                <a href="/" class="nav-link">Home</a>
+                <a href="/about/" class="nav-link">About</a>
+                <a href="/catalog/" class="nav-link active">Catalog</a>
+                <a href="/contact/" class="nav-link">Contact</a>
             </nav>
         </div>
     </header>
@@ -45,7 +45,7 @@
                         Download the latest catalog with our complete range of products and
                         specifications.
                     </p>
-                    <a href="docs/products.pdf" download="Noran-Product-Catalog.pdf"
+                    <a href="/docs/products.pdf" download="Noran-Product-Catalog.pdf"
                         class="button-primary download-btn">
                         Download Catalog (PDF)
                     </a>
@@ -56,7 +56,7 @@
                     <p>
                         Download the detailed price list for all available products.
                     </p>
-                    <a href="docs/price-list.pdf" download="Noran-Price-List.pdf" class="button-primary download-btn">
+                    <a href="/docs/price-list.pdf" download="Noran-Price-List.pdf" class="button-primary download-btn">
                         Download Price List (PDF)
                     </a>
                 </article>
@@ -72,7 +72,7 @@
     <script>
         document.getElementById("year").textContent = new Date().getFullYear();
     </script>
-    <script src="script.js"></script>
+    <script src="/script.js"></script>
 </body>
 
 </html>
