--- a/contact/index.html
+++ b/contact/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8" />
     <title>Noran Transmission – Contact</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="/styles.css" />
 </head>
 
 <body>
     <header class="site-header">
         <div class="wrapper header-inner">
-            <a href="index.html" class="logo">
-                <img src="logo.png" alt="Noran Transmission logo" class="logo-img" />
+            <a href="/" class="logo">
+                <img src="/logo.png" alt="Noran Transmission logo" class="logo-img" />
                 <span class="sr-only">Noran Transmission</span>
             </a>
 
@@ -21,10 +21,10 @@
             </button>
 
             <nav class="main-nav" id="mainNav">
-                <a href="index.html" class="nav-link">Home</a>
-                <a href="about.html" class="nav-link">About</a>
-                <a href="catalog.html" class="nav-link">Catalog</a>
-                <a href="contact.html" class="nav-link active">Contact</a>
+                <a href="/" class="nav-link">Home</a>
+                <a href="/about/" class="nav-link">About</a>
+                <a href="/catalog/" class="nav-link">Catalog</a>
+                <a href="/contact/" class="nav-link active">Contact</a>
             </nav>
         </div>
     </header>
@@ -89,7 +89,7 @@
         document.getElementById("year").textContent = new Date().getFullYear();
     </script>
 
-    <script src="script.js"></script>
+    <script src="/script.js"></script>
 
 </body>
 
