--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header class="site-header">
         <div class="wrapper header-inner">
-            <a href="index.html" class="logo">
+            <a href="/" class="logo">
                 <img src="logo.png" alt="Noran Transmission logo" class="logo-img" />
                 <span class="sr-only">Noran Transmission</span>
             </a>
@@ -21,10 +21,10 @@
             </button>
 
             <nav class="main-nav" id="mainNav">
-                <a href="index.html" class="nav-link active">Home</a>
-                <a href="about.html" class="nav-link">About</a>
-                <a href="catalog.html" class="nav-link">Catalog</a>
-                <a href="contact.html" class="nav-link">Contact</a>
+                <a href="/" class="nav-link active">Home</a>
+                <a href="/about/" class="nav-link">About</a>
+                <a href="/catalog/" class="nav-link">Catalog</a>
+                <a href="/contact/" class="nav-link">Contact</a>
             </nav>
         </div>
     </header>
